pomodoro: rename directories && add Teams model

--- a/apps/_pomodoro_app/_backend/package.json
+++ b/apps/_pomodoro_app/_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/_back02keystone",
+  "name": "@app/pomodoro_backend",
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
