--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/pomodoro_backend",
+  "name": "@app/_pomodoro_app",
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
@@ -26,6 +26,13 @@
     "cross-env": "^7.0.0",
     "date-fns": "^2.13.0",
     "express": "^4.17.1",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.1.4",
+    "isomorphic-unfetch": "^3.0.0",
+    "less": "^3.11.1",
+    "next": "9.3.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
