pomodoro: add realtime app support

--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -33,6 +33,7 @@
     "less": "^3.11.1",
     "next": "9.3.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "socket.io": "^2.3.0"
   }
 }
