--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "babel-jest": "^26.0.1",
     "jest": "^26.0.1"
   }
