change package.json, add yarn coomand

--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+    "restruct": "node ./scripts/main_task.js",
     "test": "jest",
     "build": "cross-env NODE_ENV=production keystone build",
     "start": "cross-env NODE_ENV=production keystone start",
