pomodoro: add CORS

--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "body-parser": "latest"
+    "body-parser": "latest",
+    "cors": "latest"
   }
 }
