--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -36,7 +36,7 @@
     "react-dom": "^16.13.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "body-parser": "latest",
-    "cors": "latest"
+    "body-parser": "1.19.0",
+    "cors": "2.8.5"
   }
 }
