--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@app/_compability_app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
     "restruct": "node ./scripts/main_task.js",
@@ -12,8 +13,6 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@apollo/react-ssr": "^3.1.5",
-    "@core/config": "^1.0.0",
-    "@core/keystone": "^1.0.0",
     "@emotion/styled": "^10.0.27",
     "@keystonejs/adapter-knex": "^10.1.0",
     "@keystonejs/adapter-mongoose": "^8.1.3",
