--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@app/_pomodoro_app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "test": "jest",
     "dev": "keystone dev",
@@ -11,8 +12,6 @@
     "create-tables": "keystone create-tables"
   },
   "dependencies": {
-    "@core/config": "^1.0.0",
-    "@core/keystone": "^1.0.0",
     "@keystonejs/adapter-knex": "^10.1.0",
     "@keystonejs/adapter-mongoose": "^8.1.3",
     "@keystonejs/app-admin-ui": "^7.0.4",
