--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -11,44 +11,34 @@
     "create-tables": "keystone create-tables"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@apollo/react-ssr": "^3.1.5",
     "@emotion/styled": "^10.0.27",
-    "@keystonejs/adapter-knex": "^10.1.0",
-    "@keystonejs/adapter-mongoose": "^8.1.3",
-    "@keystonejs/app-admin-ui": "^7.0.4",
-    "@keystonejs/app-graphql": "^5.1.8",
+    "@keystonejs/adapter-knex": "^11.0.1",
+    "@keystonejs/adapter-mongoose": "^9.0.2",
+    "@keystonejs/app-admin-ui": "^7.3.1",
+    "@keystonejs/app-graphql": "^6.1.0",
     "@keystonejs/app-static": "^5.1.2",
-    "@keystonejs/auth-password": "^5.1.10",
-    "@keystonejs/fields": "^13.0.1",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.1",
-    "@keystonejs/keystone": "^11.1.3",
+    "@keystonejs/auth-password": "^5.1.13",
+    "@keystonejs/fields": "^16.1.0",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.5",
+    "@keystonejs/keystone": "^13.1.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^4.3.5",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
-    "apollo-upload-client": "^13.0.0",
-    "babel-jest": "^26.1.0",
+    "antd": "^4.5.4",
+    "babel-jest": "^26.3.0",
     "cross-env": "^7.0.0",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
-    "graphql": "^15.1.0",
-    "graphql-tag": "^2.10.3",
-    "isomorphic-unfetch": "^3.0.0",
-    "lodash": "^4.17.19",
-    "next": "9.4.4",
-    "prop-types": "^15.7.2",
-    "rc-queue-anim": "^1.8.5",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.20",
+    "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^4.7.2",
-    "react-toast-notifications": "^2.4.0"
+    "react-intl": "^5.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
