--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -21,6 +21,7 @@
     "@keystonejs/fields": "^16.1.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.3.5",
     "@keystonejs/keystone": "^13.1.1",
+    "@keystonejs/server-side-graphql-client": "^1.1.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
