--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -22,13 +22,14 @@
     "@keystonejs/fields": "^16.1.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.3.5",
     "@keystonejs/keystone": "^13.1.1",
+    "@keystonejs/server-side-graphql-client": "^1.1.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
     "cross-env": "^7.0.0",
     "express": "^4.17.1",
     "jest": "^26.4.0",
     "less": "^3.12.2",
-    "next": "9.5.2",
+    "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "socket.io": "^2.3.0",
