--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "build": "node ./bin/run-build-all"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "^2.1.2"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": false,
+    "singleQuote": true
   }
 }
