--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -12,28 +12,27 @@
     "create-tables": "keystone create-tables"
   },
   "dependencies": {
-    "@keystonejs/adapter-knex": "^11.0.2",
-    "@keystonejs/adapter-mongoose": "^9.0.3",
-    "@keystonejs/app-admin-ui": "^7.3.2",
-    "@keystonejs/app-graphql": "^6.1.0",
-    "@keystonejs/app-next": "^5.2.1",
-    "@keystonejs/app-static": "^5.1.2",
-    "@keystonejs/auth-password": "^5.1.14",
-    "@keystonejs/fields": "^17.0.0",
-    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.6",
-    "@keystonejs/keystone": "^14.0.0",
-    "@keystonejs/server-side-graphql-client": "^1.1.1",
-    "@zeit/next-less": "^1.0.1",
-    "antd": "^4.6.1",
-    "cross-env": "^7.0.0",
-    "express": "^4.17.1",
-    "jest": "^26.4.2",
-    "less": "^3.12.2",
-    "next": "^9.5.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "@keystonejs/adapter-knex": "11.0.2",
+    "@keystonejs/adapter-mongoose": "9.0.3",
+    "@keystonejs/app-admin-ui": "7.3.2",
+    "@keystonejs/app-graphql": "6.1.0",
+    "@keystonejs/app-next": "5.2.1",
+    "@keystonejs/app-static": "5.1.2",
+    "@keystonejs/auth-password": "5.1.14",
+    "@keystonejs/fields": "17.0.0",
+    "@keystonejs/fields-wysiwyg-tinymce": "5.3.6",
+    "@keystonejs/keystone": "14.0.0",
+    "@keystonejs/server-side-graphql-client": "1.1.1",
+    "@zeit/next-less": "1.0.1",
+    "antd": "4.6.1",
+    "express": "4.17.1",
+    "jest": "26.4.2",
+    "less": "3.12.2",
+    "next": "9.5.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
     "body-parser": "1.19.0",
     "cors": "2.8.5"
   }
