--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -25,6 +25,8 @@
     "@keystonejs/server-side-graphql-client": "1.1.1",
     "@zeit/next-less": "1.0.1",
     "antd": "4.6.1",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
     "express": "4.17.1",
     "jest": "26.4.2",
     "less": "3.12.2",
@@ -32,8 +34,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "socket.io": "2.3.0",
-    "socket.io-client": "2.3.0",
-    "body-parser": "1.19.0",
-    "cors": "2.8.5"
-  }
+    "socket.io-client": "2.3.0"
+  },
+  "repository": "https://github.com/pahaz/hackathon-boilerplate-starter-kit/tree/master/apps/_pomodoro_app"
 }
