--- a/apps/_compability_app/package.json
+++ b/apps/_compability_app/package.json
@@ -11,42 +11,36 @@
     "create-tables": "keystone create-tables"
   },
   "dependencies": {
-    "@emotion/core": "10.0.35",
-    "@emotion/styled": "10.0.27",
-    "@keystonejs/adapter-knex": "11.0.2",
-    "@keystonejs/adapter-mongoose": "9.0.3",
-    "@keystonejs/app-admin-ui": "7.3.2",
-    "@keystonejs/app-graphql": "6.1.0",
-    "@keystonejs/app-static": "5.1.2",
-    "@keystonejs/auth-password": "5.1.14",
-    "@keystonejs/fields": "17.0.0",
-    "@keystonejs/fields-wysiwyg-tinymce": "5.3.6",
-    "@keystonejs/keystone": "14.0.0",
-    "@keystonejs/server-side-graphql-client": "1.1.1",
-    "@zeit/next-css": "1.0.1",
-    "@zeit/next-less": "1.0.1",
-    "antd": "4.6.1",
-    "cross-env": "7.0.2",
-    "emotion": "10.0.27",
-    "emotion-server": "10.0.27",
-    "express": "4.17.1",
-    "facepaint": "1.2.1",
-    "get-contrast": "2.0.0",
-    "lodash": "4.17.20",
-    "next": "9.5.2"
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "@keystonejs/adapter-knex": "^11.0.2",
+    "@keystonejs/adapter-mongoose": "^9.0.3",
+    "@keystonejs/app-admin-ui": "^7.3.2",
+    "@keystonejs/app-graphql": "^6.1.0",
+    "@keystonejs/app-static": "^5.1.2",
+    "@keystonejs/auth-password": "^5.1.14",
+    "@keystonejs/fields": "^17.0.0",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.3.6",
+    "@keystonejs/keystone": "^14.0.0",
+    "@keystonejs/server-side-graphql-client": "^1.1.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.6.1",
+    "babel-jest": "^26.3.0",
+    "cross-env": "^7.0.0",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
+    "facepaint": "^1.2.1",
+    "get-contrast": "^2.0.0",
+    "lodash": "^4.17.20",
+    "next": "^9.5.2"
   },
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/preset-env": "7.11.0",
-    "@babel/preset-react": "7.10.4",
-    "babel-jest": "26.3.0",
-    "graphql": "14.7.0",
-    "graphql-tag": "2.11.0",
-    "jest": "26.4.2",
-    "less": "3.12.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-intl": "5.7.1"
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.9.4",
+    "babel-jest": "^26.0.1",
+    "jest": "^26.1.0"
   },
   "repository": "https://github.com/pahaz/hackathon-boilerplate-starter-kit/tree/master/apps/_compability_app"
 }
