--- a/apps/_pomodoro_app/package.json
+++ b/apps/_pomodoro_app/package.json
@@ -24,9 +24,10 @@
     "@keystonejs/keystone": "^14.0.0",
     "@keystonejs/server-side-graphql-client": "^1.1.1",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^4.5.4",
+    "antd": "^4.6.1",
     "cross-env": "^7.0.0",
-    "jest": "^26.4.0",
+    "less": "^3.12.2",
+    "jest": "^26.4.2",
     "next": "^9.5.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
