--- a/apps/sberhack/package.json
+++ b/apps/sberhack/package.json
@@ -35,6 +35,7 @@
     "antd": "^4.8.2",
     "babel-jest": "^26.6.3",
     "classnames": "2.2.6",
+    "codemirror": "^5.58.3",
     "date-fns": "^2.15.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
@@ -52,6 +53,7 @@
     "qs": "^6.9.4",
     "rc-queue-anim": "^1.8.5",
     "react": "^16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^16.13.1",
     "react-fittext": "^1.0.0",
     "react-markdown": "^4.3.1",
