--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -32,12 +32,13 @@
     "@keystonejs/list-plugins": "^7.1.4",
     "@keystonejs/server-side-graphql-client": "^1.1.2",
     "@keystonejs/utils": "^6.0.1",
+    "@types/lodash": "^4.14.168",
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.8.2",
     "classnames": "2.2.6",
-    "date-fns": "^2.15.0",
+    "date-fns": "^2.17.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
@@ -45,9 +46,10 @@
     "firebase": "^7.19.0",
     "firebase-admin": "^9.5.0",
     "get-contrast": "^2.0.0",
+    "graphql-tag": "^2.11.0",
     "immer": "^8.0.1",
     "less": "^3.12.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "next": "^9.5.2",
     "next-transpile-modules": "^4.1.0",
     "numeral": "2.0.6",
@@ -62,7 +64,6 @@
     "use-immer": "^0.4.1",
     "uuid": "^8.3.0",
     "validator": "^13.1.1",
-    "graphql-tag": "^2.11.0",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
