--- a/apps/notification_bot/package.json
+++ b/apps/notification_bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/notification_bot",
+  "name": "@app/notificationBot",
   "version": "1.0.0",
   "private": true,
   "description": "doma.ai telegram git notification bot",
