--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -38,10 +38,16 @@
     "@keystonejs/list-plugins": "^8.1.0",
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
+    "@sentry/integrations": "^6.2.5",
+    "@sentry/node": "^6.2.5",
+    "@sentry/react": "^6.2.5",
+    "@sentry/webpack-plugin": "^1.15.0",
     "@types/lodash": "^4.14.168",
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "@zeit/next-source-maps": "^0.0.3",
+    "@zeit/next-typescript": "^1.1.1",
     "antd": "^4.8.2",
     "antd-mask-input": "^0.1.14",
     "bull": "^3.22.0",
