SBERDOMA-111 add scroll

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -71,6 +71,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fittext": "^1.0.0",
+    "react-indiana-drag-scroll": "^2.0.1",
     "react-markdown": "^4.3.1",
     "react-responsive": "^8.1.0",
     "react-test-renderer": "^16.13.1",
