--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -42,6 +42,7 @@
     "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "ajv": "^8.2.0",
     "antd": "^4.8.2",
     "antd-mask-input": "^0.1.14",
     "bull": "^3.22.0",
