--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -75,6 +75,7 @@
     "react-markdown": "^4.3.1",
     "react-responsive": "^8.1.0",
     "react-test-renderer": "^16.13.1",
+    "react-use-keypress": "^1.3.0",
     "use-immer": "^0.4.1",
     "uuid": "^8.3.0",
     "validate.js": "^0.13.1",
