--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -13,7 +13,8 @@
     "makemigrations": "./../../bin/kmigrator.py makemigrations",
     "migrate": "./../../bin/kmigrator.py migrate",
     "maketypes": "mkdirp dist/admin && NODE_ENV=test node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
-    "createschema": "./../../bin/createschema"
+    "createschema": "./../../bin/createschema",
+    "generate-tickets": "node ./../../bin/generate-tickets.js"
   },
   "dependencies": {
     "@2gis/mapgl": "^1.12.0",
