--- a/apps/condo/tsconfig.json
+++ b/apps/condo/tsconfig.json
@@ -27,8 +27,6 @@
   "exclude": [
     "node_modules",
     ".next",
-    "out",
-    "cypress/cypress.config.ts",
-    "cypress/**/*.ts"
+    "out"
   ]
 }
