--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -3,6 +3,9 @@ name: "Test CI Run"
 concurrency: deploy_backup_production.yaml
 
 on:
+  push:
+    branches:
+      - "chore/os-ci"
   workflow_dispatch:
     branches:
       - '*'
