ci(global): initial trigger

--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -25,4 +25,5 @@ jobs:
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
 
+      - run: ls apps
       - run: ls apps/eps
