--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, windows-latest]
+        node-version: [16.x]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -25,5 +26,19 @@ jobs:
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
 
-      - run: ls apps
-      - run: ls apps/eps
+      - name: Prepare Node environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+
+      - name: Install packages
+        run: yarn
+
+      - name: Build condo dependencies
+        run: yarn workspace @app/condo build:deps
+
+      - name: Up the databases
+        run: docker compose up -d postgresdb redis
+
+
