--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install packages
-        run: yarn
+        run: yarn install
 
       - name: Build condo dependencies
         run: yarn workspace @app/condo build:deps
