--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,8 +29,8 @@
   ],
   "scripts": {
     "build:deps": "turbo build --filter=@open-condo/ui^...",
-    "build:styles": "find src/tokens -mindepth 1 -not -name 'tokens.json' -delete && node bin/prepare-tokens.js && node bin/buildStyleVars/runner.js --web less css",
-    "build:colors": "find src/colors -mindepth 1 -not -name 'index.ts' -delete && node bin/generate-colors.js",
+    "build:styles": "rimraf -g 'src/tokens/!(tokens.json)' && node bin/prepare-tokens.js && node bin/buildStyleVars/runner.js --web less css",
+    "build:colors": "rimraf -g 'src/colors/!(index.ts)' && node bin/generate-colors.js",
     "build:tokens": "yarn build:styles && yarn build:colors",
     "build:lib": "webpack --config webpack.prod.js && tsc --project tsconfig.prod.json",
     "build": "yarn build:tokens && yarn build:lib",
@@ -107,6 +107,7 @@
     "quicktype-core": "^6.0.71",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rimraf": "^6.0.1",
     "source-map-loader": "^4.0.1",
     "storybook": "7.6.20",
     "style-dictionary": "^3.9.2",
