--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -41,6 +41,6 @@ jobs:
         run: yarn workspace @app/condo build:deps
 
       - name: Up the databases
-        run: docker compose up -d postgresdb redis
+        run: docker compose up --platform linux/amd64 -d postgresdb redis
 
 
