--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -40,15 +40,18 @@ jobs:
       - name: Build condo dependencies
         run: yarn workspace @app/condo build:deps
 
-      - name: Start Databases
-        shell: bash
+      # Docker compose for Windows
+      - name: Start Databases (Windows)
+        if: matrix.os == 'windows-latest'
         run: |
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            set DOCKER_DEFAULT_PLATFORM=linux/amd64
-          else
-            export DOCKER_DEFAULT_PLATFORM=linux/amd64
-          fi
-          docker compose up -d postgresdb redis
+         set DOCKER_DEFAULT_PLATFORM=linux/amd64
+         docker compose up --platform linux/amd64 -d postgresdb redis
+
+      # Docker compose for Linux
+      - name: Start Databases (Linux)
+        if: matrix.os != 'windows-latest'
+        run: docker compose up -d postgresdb redis
+      
 
       - name: Teardown Databases
         if: always()
