--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -37,13 +37,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
-      - name: Install packages
-        run: |
-          npm i -g turbo
-          yarn --no-immutable
+#      - name: Install packages
+#        run: |
+#          npm i -g turbo
+#          yarn --no-immutable
+#
+#      - name: Build condo dependencies
+#        run: yarn workspace @app/condo build:deps
 
-      - name: Build condo dependencies
-        run: yarn workspace @app/condo build:deps
+      - run: dockerd --experimental
 
       - name: Setup PG db
         run: |
