--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -26,10 +26,22 @@ jobs:
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
 
-      - name: Debug Docker Info
+      - name: Setup native Postgres (Windows Runner only)
+        if: matrix.os == 'windows-latest'
+        uses: ikalnytskyi/action-setup-postgres@v7
+        with:
+          postgres-version: 16
+
+      - name: Setup native Redis (Windows Runner only)
+        if: matrix.os == 'windows-latest'
         run: |
-          docker version
-          docker info
+          choco install redis --version 6.2.17 -y
+          redis-server --daemonize yes
+
+      - name: Setup databases (Linux Runners)
+        if: matrix.os != 'windows-latest'
+        run: docker compose up -d postgresdb redis
+
 
       - name: Prepare Node environment
         uses: actions/setup-node@v3
@@ -37,27 +49,16 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
 
-#      - name: Install packages
-#        run: |
-#          npm i -g turbo
-#          yarn --no-immutable
-#
-#      - name: Build condo dependencies
-#        run: yarn workspace @app/condo build:deps
-
-      - run: sudo dockerd --experimental
-
-      - name: Setup PG db
+      - name: Install packages
         run: |
-          docker run -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_DB=$POSTGRES_DB -p="127.0.0.1:5432:5432" -d postgres:13.2
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: main
+          npm i -g turbo
+          yarn --no-immutable
 
-      - name: Setup Redis db
-        run: |
-          docker run -p="127.0.0.1:6379:6379" -d redis:6.2
+      - name: Build condo dependencies
+        run: yarn workspace @app/condo build:deps
 
-#      - name: Build condo itself
-#        run: yarn workspace @app/condo build
+      - name: Prepare condo environment
+        run: node bin/prepare.js -f condo
+
+      - name: Build condo itself
+        run: yarn workspace @app/condo build
