--- a/.github/workflows/tst.yml
+++ b/.github/workflows/tst.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04, windows-latest]
         node-version: [16.x]
+        python-version: [3.13]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -42,6 +43,10 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: docker compose up -d postgresdb redis
 
+      - name: Prepare Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Prepare Node environment
         uses: actions/setup-node@v3
@@ -51,6 +56,7 @@ jobs:
 
       - name: Install packages
         run: |
+          pip install Django psycopg2-binary
           npm i -g turbo
           yarn --no-immutable
 
