--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,7 +6,9 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  pull_request_target:
+#  pull_request_target:
+#  TODO: REPLACE BACK
+  pull_request:
     types:
       - opened
       - reopened
@@ -152,6 +154,9 @@ jobs:
             registry:
               - 'apps/registry/**'
               - 'packages/**'
+            open-condo:
+              - 'packages/**'
+              - '**/*.md'
 
   lint:
     name: Lint source code
@@ -205,6 +210,68 @@ jobs:
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
       - run: ./bin/run-semgrep.sh -a
+
+  open-condo-build:
+    name: Build open-source part
+    needs:
+      - authorize
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.open-condo == 'true' }}
+    strategy:
+      matrix:
+        os: [ ubuntu-22.04, windows-latest ]
+        node-version: [ 16.x ]
+        python-version: [ 3.13 ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout code without submodules
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: 'false'
+          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
+          ref: ${{ env.REF }}
+      - name: Setup native Postgres (Windows Runner only)
+        if: matrix.os == 'windows-latest'
+        uses: ikalnytskyi/action-setup-postgres@v7
+        with:
+          postgres-version: 16
+      - name: Setup native Redis (Windows Runner only)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install redis --version 6.2.17 -y
+          redis-server --daemonize yes
+      - name: Setup databases (Linux Runners)
+        if: matrix.os != 'windows-latest'
+        run: |
+          docker compose up -d postgresdb redis
+      - name: Prepare Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Prepare Node environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      - name: Install packages
+        run: |
+          pip install Django psycopg2-binary
+          npm i -g turbo
+          yarn --no-immutable
+      - name: Build condo dependencies
+        run: |
+          yarn workspace @app/condo build:deps
+      - name: Prepare local condo environment
+        run: |
+          node bin/prepare.js -f condo
+      - name: Build condo itself
+        run: |
+          yarn workspace @app/condo build
+      - name: Start condo app
+        run: |
+          yarn workspace @app/condo start & node bin/wait-apps-apis.js -f condo
+
 
   run-address-service-tests:
     name: Address-Service Tests
