ci: INFRA-783 adjust changes detection

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -153,6 +153,8 @@ jobs:
             open-condo:
               - 'packages/**'
               - '**/*.md'
+              - '*'
+              - '!.helm/**'
             registry:
               - 'apps/registry/**'
               - 'packages/**'
