--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -22,7 +22,7 @@ concurrency:
 env:
   DOCKER_IMAGE: condo/condo-image:${{ github.event.pull_request.head.sha || github.sha }}
   DOCKER_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/condo/condo-image:${{ github.event.pull_request.head.sha || github.sha }}
-  PG_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:13.2
+  PG_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.4
   REDIS_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/redis:6.2
   REF: ${{ github.event.pull_request.head.sha || github.ref }}
 
@@ -119,8 +119,9 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       address-service: ${{ steps.detect-changes.outputs.address-service }}
-      dev-api: ${{ steps.detect-changes.outputs.dev-api }}
       condorb: ${{ steps.detect-changes.outputs.condorb }}
+      dev-api: ${{ steps.detect-changes.outputs.dev-api }}
+      open-condo: ${{ steps.detect-changes.outputs.open-condo }}
       registry: ${{ steps.detect-changes.outputs.registry }}
       webhooks: ${{ steps.detect-changes.outputs.webhooks }}
     steps:
@@ -147,11 +148,16 @@ jobs:
               - 'apps/condo/domains/miniapp/**'
               - 'apps/condo/domains/user/**'
               - 'packages/**'
-            webhooks:
-              - 'packages/webhooks/**'
+            open-condo:
+              - 'packages/**'
+              - '**/*.md'
+              - '*'
+              - '!.helm/**'
             registry:
               - 'apps/registry/**'
               - 'packages/**'
+            webhooks:
+              - 'packages/webhooks/**'
 
   lint:
     name: Lint source code
@@ -205,6 +211,68 @@ jobs:
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
       - run: ./bin/run-semgrep.sh -a
+
+  open-condo-build:
+    name: Build open-source part
+    needs:
+      - authorize
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.open-condo == 'true' }}
+    strategy:
+      matrix:
+        os: [ ubuntu-22.04, windows-latest ]
+        node-version: [ 16.x ]
+        python-version: [ 3.13 ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout code without submodules
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: 'false'
+          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
+          ref: ${{ env.REF }}
+      - name: Setup native Postgres (Windows Runner only)
+        if: matrix.os == 'windows-latest'
+        uses: ikalnytskyi/action-setup-postgres@v7
+        with:
+          postgres-version: 16
+      - name: Setup native Redis (Windows Runner only)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install redis --version 6.2.17 -y
+          redis-server --daemonize yes
+      - name: Setup databases (Linux Runners)
+        if: matrix.os != 'windows-latest'
+        run: |
+          docker compose up -d postgresdb redis
+      - name: Prepare Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Prepare Node environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+      - name: Install packages
+        run: |
+          pip install Django psycopg2-binary
+          npm i -g turbo
+          yarn --no-immutable
+      - name: Build condo dependencies
+        run: |
+          yarn workspace @app/condo build:deps
+      - name: Prepare local condo environment
+        run: |
+          node bin/prepare.js -f condo
+      - name: Build condo itself
+        run: |
+          yarn workspace @app/condo build
+      - name: Start condo app
+        run: |
+          yarn workspace @app/condo start & node bin/wait-apps-apis.js -f condo
+
 
   run-address-service-tests:
     name: Address-Service Tests
