fix(global): INFRA-787 ignore gql generated files at sonarcloud analysis

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,2 @@
 sonar.cpd.exclusions=**/*.js,**/*.ts,**/OldBaseNewsForm.tsx,apps/miniapp/**/*,**/gql/*.ts
-sonar.exclusions=**/*.test.js,**/*.spec.js
+sonar.exclusions=**/*.test.js,**/*.spec.js,**/gql/*.ts
