feat: INFRA-789 disable rate limit in tests

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DISABLE_LOGGING=false
+DISABLE_RATE_LIMIT=true
 DEFAULT_LOCALE=en
 FILE_FIELD_ADAPTER=local
 HELP_REQUISITES='{ "support_email": "help@example.com", "support_email_mobile": "helpmobile@example.com", "bot_email": "service@example.com", "support_phone": "+1 301 000-00-00" }'
