--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   converge:
     name: "[review] Deploy"
-    runs-on: self-hosted
+    runs-on: new-one
     env:
       WERF_SECRET_KEY: ${{ secrets.WERF_SECRET_KEY }}
       PULL_USER: ${{ secrets.PULL_USER }}
