refactor(employee-bot): INFRA-852 rename app

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,9 +37,9 @@
 [submodule "apps/documents-next"]
 	path = apps/documents-next
 	url = git@github.com:open-condo-software/condo-documents-next.git
-[submodule "apps/telegram-employee-bot"]
-    path = apps/telegram-employee-bot
-    url = git@github.com:open-condo-software/condo-telegram-employee-bot.git
+[submodule "apps/employee-bot"]
+	path = apps/employee-bot
+	url = git@github.com:open-condo-software/condo-employee-bot.git
 [submodule "apps/eds-mosreg-integration"]
 	path = apps/eds-mosreg-integration
 	url = git@github.com:open-condo-software/condo-eds-mosreg-integration.git
