--- a/werf.yaml
+++ b/werf.yaml
@@ -789,7 +789,7 @@ shell:
     - "echo 'REDIS_URL=undefined' >> /app/.env"
     - "echo 'NODE_ENV=production' >> /app/.env"
     - "echo 'FILE_FIELD_ADAPTER=local' >> /app/.env"
-    - "yarn workspace @app/telegram-employee-bot build"
+    - "yarn workspace @app/employee-bot build"
     - "rm -rf /app/.env"
     - "rm -rf /app/.config"
 
