--- a/.gitmodules
+++ b/.gitmodules
@@ -43,9 +43,9 @@
 [submodule "apps/eds-mosreg-integration"]
 	path = apps/eds-mosreg-integration
 	url = git@github.com:open-condo-software/condo-eds-mosreg-integration.git
-[submodule "apps/condo-restapi"]
-	path = apps/condo-restapi
-	url = git@github.com:open-condo-software/condo-restapi.git
+[submodule "apps/external-api"]
+	path = apps/external-api
+	url = git@github.com:open-condo-software/condo-external-api.git
 [submodule "apps/resident-app"]
 	path = apps/resident-app
 	url = git@github.com:open-condo-software/condo-resident-app.git
