--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -500,11 +500,11 @@ jobs:
           docker exec condo-container node bin/prepare.js -f condo registry
       - name: Check migrations state
         run: |
-          docker exec condo-container yarn workspace @app/registry makemigrations --check
+          docker exec condo-container yarn workspace @app/registry-importer makemigrations --check
       - name: Run apps and tests
         run: |
           docker exec condo-container sh -c "(\
           yarn workspace @app/condo start & \
-          yarn workspace @app/registry start & \
+          yarn workspace @app/registry-importer start & \
           node bin/wait-apps-apis.js -f condo registry) && \
-          yarn workspace @app/registry test"
+          yarn workspace @app/registry-importer test"
