ci: INFRA-854 fix ci triggers

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -155,7 +155,7 @@ jobs:
               - '*'
               - '!.helm/**'
             registry:
-              - 'apps/registry/**'
+              - 'apps/registry-importer/**'
               - 'packages/**'
             webhooks:
               - 'packages/webhooks/**'
