--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -123,7 +123,7 @@ jobs:
       condorb: ${{ steps.detect-changes.outputs.condorb }}
       dev-api: ${{ steps.detect-changes.outputs.dev-api }}
       open-condo: ${{ steps.detect-changes.outputs.open-condo }}
-      registry: ${{ steps.detect-changes.outputs.registry }}
+      registry-importer: ${{ steps.detect-changes.outputs.registry-importer }}
       webhooks: ${{ steps.detect-changes.outputs.webhooks }}
     steps:
       - name: Checkout code with submodules
@@ -154,7 +154,7 @@ jobs:
               - '**/*.md'
               - '*'
               - '!.helm/**'
-            registry:
+            registry-importer:
               - 'apps/registry-importer/**'
               - 'packages/**'
             webhooks:
@@ -453,7 +453,7 @@ jobs:
       - authorize
       - build-image
       - detect-changes
-    if: ${{ needs.detect-changes.outputs.registry == 'true' }}
+    if: ${{ needs.detect-changes.outputs.registry-importer == 'true' }}
     steps:
       - name: Login to cloud registry
         uses: docker/login-action@v3
