--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -476,7 +476,7 @@ jobs:
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
       - name: Prepare apps
         run: |
-          docker exec condo-container node bin/prepare.js -f condo registry
+          docker exec condo-container node bin/prepare.js -f condo registry-importer
       - name: Check migrations state
         run: |
           docker exec condo-container yarn workspace @app/registry-importer makemigrations --check
@@ -485,7 +485,7 @@ jobs:
           docker exec condo-container sh -c "(\
           yarn workspace @app/condo start & \
           yarn workspace @app/registry-importer start & \
-          node bin/wait-apps-apis.js -f condo registry) && \
+          node bin/wait-apps-apis.js -f condo registry-importer) && \
           yarn workspace @app/registry-importer test"
 
   run-webhooks-tests:
