refactor(rb): INFRA-840 rename condorb app (#5759)
* refactor(rb): INFRA-840 rename condorb app

* refactor(global): INFRA-840 rename imports at rb & temp run tests for current context

* refactor(global): INFRA-840 change rb repo url

* hotfix(condo): update app schema

* refactor(global): INFRA-840 rename rb app

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,9 @@
 [submodule "infrastructure/helm"]
 	path = .helm
 	url = ../infrastructure-condo.git
-[submodule "apps/condorb"]
-	path = apps/condorb
-	url = ../condorb.git
+[submodule "apps/rb"]
+	path = apps/rb
+	url = git@github.com:open-condo-software/condo-rb.git
 [submodule "apps/registry-importer"]
 	path = apps/registry-importer
 	url = git@github.com:open-condo-software/condo-registry-importer.git
