--- a/.gitmodules
+++ b/.gitmodules
@@ -34,9 +34,9 @@
 [submodule "apps/pass"]
 	path = apps/pass
 	url = git@github.com:open-condo-software/condo-pass.git
-[submodule "apps/documents-next"]
-	path = apps/documents-next
-	url = git@github.com:open-condo-software/condo-documents-next.git
+[submodule "apps/documents"]
+	path = apps/documents
+	url = git@github.com:open-condo-software/condo-documents.git
 [submodule "apps/employee-bot"]
 	path = apps/employee-bot
 	url = git@github.com:open-condo-software/condo-employee-bot.git
