--- a/.gitmodules
+++ b/.gitmodules
@@ -40,9 +40,9 @@
 [submodule "apps/employee-bot"]
 	path = apps/employee-bot
 	url = git@github.com:open-condo-software/condo-employee-bot.git
-[submodule "apps/eds-mosreg-integration"]
-	path = apps/eds-mosreg-integration
-	url = git@github.com:open-condo-software/condo-eds-mosreg-integration.git
+[submodule "apps/ticket-importer"]
+	path = apps/ticket-importer
+	url = git@github.com:open-condo-software/condo-ticket-importer.git
 [submodule "apps/external-api"]
 	path = apps/external-api
 	url = git@github.com:open-condo-software/condo-external-api.git
